--- a/HelloWorldWebapp/src/main/webapp/WEB-INF/web.xml
+++ b/HelloWorldWebapp/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,23 @@
 <web-app>
   <display-name>Pipeline practice Web Application</display-name>
 
+  <servlet>
+    <servlet-name>TableBrowser</servlet-name>
+    <servlet-class>TableBrowser</servlet-class>
+  </servlet>
+  <servlet>
+    <servlet-name>HomePage</servlet-name>
+    <servlet-class>HomePage</servlet-class>
+  </servlet>
 
+  <servlet-mapping>
+    <servlet-name>TableBrowser</servlet-name>
+    <url-pattern>/browse-users</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+    <servlet-name>HomePage</servlet-name>
+    <url-pattern>/homepage</url-pattern>
+  </servlet-mapping>
 
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
